force-app/main/default/objects/Installation_Order_Product__c/Installation_Order_Product__c.object-meta.xml
<CustomObject>
    <label>Installation Order Product</label>
    <nameField>
        <label>Installation Order Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>INSTALLATION ORDER PRODUCT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>