force-app/main/default/objects/Installation_Order_Product__c/fields/Gross_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Unit_Price__c</fullName>
    <label>Gross Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>