force-app/main/default/objects/Installation_Order_Product__c/fields/Installation_Order__c.field-meta.xml
<CustomField>
    <fullName>Installation_Order__c</fullName>
    <label>Installation Order</label>
    <referenceTo>Installation_Order__c</referenceTo>
    <relationshipLabel>INSTALLATION ORDER PRODUCT</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER_PRODUCT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>