force-app/main/default/objects/Installation_Order_Product__c/fields/Main_Installation_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Installation_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Installation Order Product</label>
    <referenceTo>Installation_Order_Product__c</referenceTo>
    <relationshipLabel>INSTALLATION ORDER PRODUCT</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>