force-app/main/default/objects/Installation_Order_Product__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>INSTALLATION ORDER PRODUCT</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>