force-app/main/default/objects/Installation_Order_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>INSTALLATION ORDER PRODUCT</relationshipLabel>
    <relationshipName>INSTALLATION_ORDER_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>