force-app/main/default/objects/Installation_Order_Product__c/fields/Quantity_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_Of_Measure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>