force-app/main/default/objects/Installation_Order_Product__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Just Sold</fullName>
            </value>
            <value>
                <fullName>Out of Packing Supplies</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>