force-app/main/default/objects/Installation_Order_Product__c/fields/Rejected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Quantity__c</fullName>
    <label>Rejected Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>