force-app/main/default/objects/Installation_Order_Product__c/fields/Reship__c.field-meta.xml
<CustomField>
    <fullName>Reship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reship</label>
    <type>Checkbox</type>
</CustomField>