force-app/main/default/objects/Installation_Order_Product__c/fields/TotalAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustmentAmount__c</fullName>
    <label>Adjustments Tax</label>
    <summarizedField>Installation_Order_Item_Adjustment__c.TotalTaxAmount__c</summarizedField>
    <summaryForeignKey>Installation_Order_Item_Adjustment__c.InstallationOrderLineItemId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>