force-app/main/default/objects/Installation_Order_Product__c/fields/TotalAdjustmentTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustmentTaxAmount__c</fullName>
    <label>Adjustmens</label>
    <summarizedField>Installation_Order_Item_Adjustment__c.Amount__c</summarizedField>
    <summaryForeignKey>Installation_Order_Item_Adjustment__c.InstallationOrderLineItemId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>